# aap-hermes

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  __init__.py  _hermes_base.py  _runtime.py  adapter.py  address_input.py  after-install.md  anti_relay.py  commands.py  config.py  consent.py  contacts.py  discovery.py  ingest.py  mirror.py  peer_threads.py  plugin.yaml  pyproject.toml  reasoning.py  requirements-dev.txt  requirements.txt  scenario_log.py  service_request_origins.py  tools.py  turn_context.py
docs/: aap-hermes-thread-id-echo-fix.md
docs/design/: 2026-06-05-service-response-session-routing.md  2026-06-23-aap-address-shorthand.md
test-scenarios/: README.md  SCENARIO_1.md  SCENARIO_2.md  SCENARIO_3.md  SCENARIO_4.md  SCENARIO_5.md  SCENARIO_6.md  SCENARIO_7.md  test-mode.sh
tests/: _hermes_compat.py  conftest.py  test_adapter_scenario_log.py  test_anti_relay.py  test_attestations.py  test_client.py  test_config.py  test_contacts.py  test_conversations.py  test_decoupled_dispatch.py  test_envelopes.py  test_group_flow.py  test_group_scenario_log.py  test_identity.py  test_identity_bindings.py  test_ingest.py  test_inspect_commands.py  test_mirror.py  test_peer_threads.py  test_reasoning.py  test_register.py  test_relationships.py  test_runtime_scenario_log.py  test_scenario_log.py  test_service_followups.py  test_service_request_origins.py  test_service_request_origins_scenario_log.py  test_service_response_routing.py  test_services.py  test_setup_wizard.py  test_smoke.py  test_tools_scenario_log.py  test_v06_dispatch.py  test_v06_tools.py  test_verifiers.py
